--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Portafolio | Andres Martinez</title>
-  <base href="">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="https://portafolio-andres-m.web.app/assets/images/Home_Yo.jpeg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
