--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Portafolio | Andres Martinez</title>
   <!-- <base href="https://portafolio-andres-m.web.app/"> -->
   <base href="/">
-  <!-- <base href=""> -->
+  <!-- <base href="https://agdres.github.io/Portafolio/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="https://portafolio-andres-m.web.app/assets/images/Home_Yo.jpeg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
