--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Portafolio | Andres Martinez</title>
-  <base href="">
+  <base href="https://portafolio-andres-m.web.app/">
+  <!-- <base href="/"> -->
+  <!-- <base href="https://agdres.github.io/Portafolio/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://portafolio-andres-m.web.app/assets/images/Home_Yo.jpeg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,6 +14,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="runtime.f45c5af40b9bda80.js" type="module"></script><script src="polyfills.b3ae171f038c0dd9.js" type="module"></script><script src="main.ef63fb434f7adada.js" type="module"></script>
+<script src="runtime.e5c695ee1ea98c25.js" type="module"></script><script src="polyfills.8bf7f788be394802.js" type="module"></script><script src="main.dab11799b2f67bb3.js" type="module"></script>
 
 </body></html>
